tests/paczka1/fuzzy1/59383555.err
Error in line 18: qDn S339 27,1
Error in line 16: RPR180O S339 96,9
Error in line 27: RPR180O A324 44,5
